# pyama

./: .gitignore  .readthedocs.yaml  AGENTS.md  GUIDE.md  MVC.md  PLUGINS.md  README.md  __main__.py  importtime_pyama_pro.txt  importtime_pyama_pro_after.txt  pyama-pro.spec  pyama-process.spec  pyama-viz.spec  pyproject.toml  requirements.txt  time_mapping_example.csv
docs/: conf.py  (+7 more)
pyama/: pyproject.toml
pyama-core/: .dockerignore  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
pyama-core/src/pyama_core/analysis/: event_detection.py  fitting_service.py
pyama-core/src/pyama_core/analysis/models/: __init__.py
pyama-core/src/pyama_core/api/: __init__.py  database.py  server.py
pyama-core/src/pyama_core/api/mcp/: __init__.py  server.py  tools.py
pyama-core/src/pyama_core/api/routes/: __init__.py  data.py  visualization.py
pyama-core/src/pyama_core/api/schemas/: __init__.py  microscopy.py  processing.py  task.py
pyama-core/src/pyama_core/api/services/: __init__.py  microscopy_service.py  task_service.py
pyama-core/src/pyama_core/benchmark/: __init__.py  comparison.py  metrics.py  report.py  trajectory.py
pyama-core/src/pyama_core/cli/: main.py
pyama-core/src/pyama_core/io/: __init__.py  analysis_csv.py  config.py  microscopy.py  naming.py  processing_csv.py  results_yaml.py  trace_paths.py
pyama-core/src/pyama_core/modeling/: __init__.py  fitting.py  fitting_service.py
pyama-core/src/pyama_core/modeling/models/: __init__.py  maturation.py
pyama-core/src/pyama_core/processing/background/: run.py
pyama-core/src/pyama_core/processing/copying/: __init__.py  run.py
pyama-core/src/pyama_core/processing/cropping/: __init__.py  run.py
pyama-core/src/pyama_core/processing/extraction/: __init__.py  run.py
pyama-core/src/pyama_core/processing/merge/: __init__.py  run.py
pyama-core/src/pyama_core/processing/normalization/: __init__.py  polar.py
pyama-core/src/pyama_core/processing/segmentation/: __init__.py  cellpose.py  logstd.py
pyama-core/src/pyama_core/processing/tracking/: __init__.py  btrack.py  iou.py
pyama-core/src/pyama_core/processing/workflow/: __init__.py  run.py  worker.py
pyama-core/src/pyama_core/statistics/: __init__.py  discovery.py  metrics.py  normalization.py  service.py
pyama-core/src/pyama_core/types/: __init__.py  analysis.py  api.py  merge.py  microscopy.py  modeling.py  processing.py
pyama-core/src/pyama_core/utils/: __init__.py  plotting.py
pyama-core/src/pyama_core/visualization/: cache.py
pyama-core/tests/: __init__.py  conftest.py
pyama-core/tests/analysis/: test_event.py
pyama-core/tests/api/: __init__.py  test_endpoints.md  test_endpoints.py
pyama-core/tests/features/: test_intensity_total.py  test_particle_num.py
pyama-core/tests/processing/: test_merge.py  test_seg.py  test_track.py
pyama-core/tests/utils/: __init__.py  progress.py
pyama-fastapi/: .gitignore  README.md  TASK_DEVELOPMENT.md  pyproject.toml
pyama-fastapi/src/pyama_fastapi/: __init__.py  database.py  main.py  models.py  task_manager.py
pyama-fastapi/src/pyama_fastapi/tasks/: __init__.py  base.py  dummy.py  registry.py  tokenize.py
pyama-fastapi/tests/: test_api.py  test_input.txt  test_tokenize.py
pyama-gui/: pyproject.toml
pyama-gui/src/pyama_gui/: __init__.py  _qtwebengine_bootstrap.py  app_view_model.py  main.py  main_window.py  qtwebengine.py  task_runner.py
pyama-gui/src/pyama_gui/apps/: __init__.py
pyama-gui/src/pyama_gui/apps/alignment/: __init__.py  service.py
pyama-gui/src/pyama_gui/apps/bboxes/: __init__.py  canvas_backend.py  view.py  view_model.py
pyama-gui/src/pyama_gui/apps/modeling/: __init__.py  view.py  view_model.py
pyama-gui/src/pyama_gui/apps/processing/: __init__.py  view.py  view_model.py
pyama-gui/src/pyama_gui/apps/statistics/: __init__.py  view.py  view_model.py
pyama-gui/src/pyama_gui/components/: __init__.py  mpl_canvas.py  parameter_table.py  pyqtgraph_image_view.py  view_canvas.py
pyama-gui/src/pyama_gui/modeling/: __init__.py  data.py  main_tab.py  parameter.py  quality.py  view.py  view_model.py
pyama-gui/src/pyama_gui/processing/: __init__.py  input.py  main_tab.py  merge.py  output.py  view.py  view_model.py
pyama-gui/src/pyama_gui/services/: __init__.py  file_dialogs.py  path_reveal.py
pyama-gui/src/pyama_gui/statistics/: __init__.py  comparison.py  detail.py  load.py  main_tab.py  view.py  view_model.py
pyama-gui/src/pyama_gui/types/: __init__.py  bboxes.py  common.py  modeling.py  processing.py  statistics.py  visualization.py
pyama-gui/src/pyama_gui/utils/: __init__.py  threading.py
pyama-gui/src/pyama_gui/visualization/: __init__.py  image.py  load.py  main_tab.py  trace.py  view.py  view_model.py
pyama-gui/src/pyama_gui/widgets/: __init__.py  mpl_canvas.py
pyama-gui/tests/: test_main_window_tabs.py  test_qtwebengine.py
pyama-nextjs/src-tauri/: Cargo.toml  tauri.conf.json
pyama/src/pyama/: __init__.py
pyama/src/pyama/apps/: __init__.py
pyama/src/pyama/io/: __init__.py  config.py  csv.py  microscopy.py  path.py  results.py  samples.py  traces.py  visualization_cache.py  visualization_source.py  zarr.py
pyama/src/pyama/rpc/: __init__.py  artifacts.py  client.py  codec.py  process.py  server.py
pyama/src/pyama/tasks/: __init__.py  backends.py  broker.py  manager.py  models.py  workflow.py
pyama/src/pyama/types/: __init__.py  io.py  microscopy.py  modeling.py  pipeline.py  processing.py  progress_payload.py  rpc.py  statistics.py  tasks.py  visualization.py
pyama/src/pyama/utils/: __init__.py  position.py  processing.py  progress.py  roi.py  visualization.py
pyama/tests/: test_algo.py  test_background.py  test_bbox.py  test_bbox_workflow.py  test_io_traces.py  test_io_visualization_cache.py  test_merge.py  test_microscopy_io.py  test_modeling_params.py  test_processing_config.py  test_processing_runtime.py  test_progress_utils.py  test_results_scan.py  test_results_yaml.py  test_roi.py  test_rpc.py  test_statistics.py  test_tasks.py  test_type_boundaries.py  test_utils_processing.py  test_utils_roi.py  test_workflow.py
(+537 files in other folders)
