[project]
name = "pyama-core"
version = "0.1.0"
description = "Core processing library for PyAMA"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "bioio",
    "bioio-nd2",
    "bioio-czi",
    "bioio-ome-tiff",
    "pandas",
    "scikit-image",
    "pyyaml",
    "pylibczirw>=5.0.0",
    "typer",
    "tqdm",
    "cellpose",
    "pytest",
    "matplotlib",
    "spotiflow",
    "btrack",  # Note: btrack 0.7.0 has known bugs with 2D tracking (Eigen assertion crashes in C library)
    # If crashes occur, use IoU tracking instead (set tracking_method: iou in config)
    # Downgrading to btrack 0.6.x is not possible due to pydantic version conflicts with other dependencies
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "scm"
url = "https://pypi.scm.io/simple/"

[tool.uv.sources]
pylibczirw = { index = "scm" }

[project.scripts]
pyama-core = "pyama_core.cli.main:app"
