[project]
name = "pyama-core"
version = "0.1.0"
description = "Core processing library for PyAMA"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "nd2",
    "pandas<3",
    "scikit-image",
    "pyyaml",
    "pylibczirw>=5.0.0",
    "typer",
    "tqdm",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "scm"
url = "https://pypi.scm.io/simple/"

[tool.uv.sources]
pylibczirw = { index = "scm" }

[project.scripts]
pyama-core = "pyama_core.cli.main:app"
