[project]
name = "pyama-fastapi"
version = "0.1.0"
description = "FastAPI backend for PyAMA chat interface"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
]

[project.optional-dependencies]
full = [
    "pyama-core>=0.1.0",
]

[project.scripts]
pyama-fastapi = "pyama_fastapi.main:run"

[tool.uv]
package = true
